--- a/dashboard/views/index.pug
+++ b/dashboard/views/index.pug
@@ -1,7 +1,11 @@
+
+
 doctype  
 html(lang="en")
     head
         include includes/header.pug
+
+        link(rel='stylesheet', href='/static/css/index.css')
     body
         include includes/navbar.pug
         .jumbotron.text-center.bg-transparent 
