--- a/dashboard/views/includes/mixins.pug
+++ b/dashboard/views/includes/mixins.pug
@@ -2,4 +2,4 @@ mixin category(category)
     li.list-group-item(id=category.name) #[i(class=category.icon)] #{category.name}
 
 mixin command(command)
-    li.list-group-item(class=command.directory) #{command.name} - #{command.description}
+    li.list-group-item(id=command.name, class=command.directory) #{command.name} - #{command.description}
