--- a/dashboard/views/includes/navbar.pug
+++ b/dashboard/views/includes/navbar.pug
@@ -8,6 +8,16 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
         i.fa-solid.fa-terminal
         span.pl-1 Commands
     .navbar-nav.ml-auto
-      a.nav-link(href='/login') 
-        i.fa-solid.fa-arrow-right-to-bracket
-        span.pl-1 Login
+      if user
+        .dropdown
+          .dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
+            img.user-avatar.round(src=user.avatarUrl(32))
+            span.pl-2 #{user.username}
+          .dropdown-menu.dropdown-menu-right
+            a.dropdown-item(href='/dashboard') #[i.fas.fa-cogs.text-muted] Dashboard
+            hr
+            a.dropdown-item(href='/logout') #[i.fas.fa-user-slash.text-muted] Logout
+      else
+        a.nav-link(href='/login') 
+          i.fa-solid.fa-arrow-right-to-bracket
+          span.pl-1 Login
