--- a/dashboard/views/index.pug
+++ b/dashboard/views/index.pug
@@ -1,5 +1,3 @@
-
-
 doctype  
 html(lang="en")
     head
@@ -11,5 +9,5 @@ html(lang="en")
         .jumbotron.text-center.bg-transparent 
             h1.display-3 Stickier Bot
             p.lead Offering the best sticky services around. 
-                i.fa-solid.fa-bottle-droplet.pl-1
-            button.btn.btn-dark Add
+                i.fa-solid.fa-droplet.pl-1
+            a.btn.btn-dark(href='/invite') Add
