--- a/dashboard/views/dashboard/show.pug
+++ b/dashboard/views/dashboard/show.pug
@@ -4,6 +4,7 @@ html(lang="en")
         include ../includes/header.pug
 
         script(src='/static/js/sidebar.js', defer)
+        script(src='/static/js/guild.js', defer)
         link(rel='stylesheet', href='/static/css/sidebar.css')
         
     body
@@ -16,14 +17,19 @@ html(lang="en")
                         img.round(src=guild.iconURL({ dynamic: true, size: 128 }), alt=guild.name)
                     else
                         p.abbr #{guild.nameAcronym}
-                h4.pt-2.text-color-white #{guild.name}
+                h4#overview.pt-2 #{guild.name}
             .tabs.navbar-nav
                 .category Modules
-                a(href='#') #[i.fas.fa-gavel.pr-1] Moderation
-                a(href='#') #[i.fa-solid.fa-droplet.pr-1] General
-                a(href='#') #[i.fas.fa-sack-dollar.pr-1] Economy
-                a(href='#') #[i.fas.fa-compact-disc.pr-1] Music
+                a#moderation.cursor-pointer #[i.fas.fa-gavel.pr-1] Moderation
+                a#general.cursor-pointer #[i.fa-solid.fa-droplet.pr-1] General
+                a#economy.cursor-pointer #[i.fas.fa-sack-dollar.pr-1] Economy
+                a#music.cursor-pointer #[i.fas.fa-compact-disc.pr-1] Music
 
         include ../includes/navbar.pug
-        .jumbotron.text-center.bg-transparent 
-            h1.display-3 #{guild.name}
+        
+        
+        include modules/overview
+        include modules/moderation
+        include modules/general
+        include modules/economy
+        include modules/music
