--- a/dashboard/views/dashboard/modules/general.pug
+++ b/dashboard/views/dashboard/modules/general.pug
@@ -1,5 +1,17 @@
 section#generalModule.module.container.px-5
-    .jumbotron.bg-tranparent.pb-0
-        h1.display-3.text-center General
-    .form-group.mt-5
-        .row
+    form(action='/servers' + guild.id + '/general?_method=PUT', method = 'POST')
+        .jumbotron.bg-tranparent.pb-0
+            h1.display-4.text-center General
+        .form-group.my-5
+            .row
+                .col-4 
+                    label Prefix
+                    input.form-control(type='text', name='prefix', value="!", maxLength='5', required)
+                .col-4
+                    label Text Channels
+                    select.form-control()
+                        each channel of Array.from(guild.channels.cache.filter(c => c.type === 'text').values())
+                            option ##{channel.name} 
+                .col-4
+        .d-flex.justify-content-center
+            button.btn.btn-success #[i.fas.fa-rocket] Save
