--- a/dashboard/views/dashboard/modules/music.pug
+++ b/dashboard/views/dashboard/modules/music.pug
@@ -1,5 +1,4 @@
 section#musicModule.module.container.px-5
-    .jumbotron.bg-tranparent.pb-0
-        h1.display-4.text-center Music
-    .form-group.mt-5
-        .row
+  .jumbotron.bg-transparent.pb-0
+    h1.display-4.text-center Music
+  .form-group.mt-5
